# Openenv-hackathon

./: Dockerfile  README.md  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: __init__.py  app.py
tasks/: easy.py  graders.py  hard.py  medium.py
