[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-hackathon-email-triage"
version = "1.0.0"
description = "OpenEnv email triage and response environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.0",
  "pydantic==2.11.3",
  "openai==1.75.0",
  "numpy==2.2.4",
]

[tool.setuptools]
py-modules = ["env", "inference", "models", "server"]

[tool.setuptools.packages.find]
include = ["tasks*"]
