[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-hackathon-email-triage"
version = "1.0.0"
description = "OpenEnv email triage and response environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi==0.115.12",
  "uvicorn==0.34.0",
  "pydantic==2.11.3",
  "openai>=2.7.2",
  "numpy==2.2.4",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["env", "inference", "models", "server"]

[tool.setuptools.packages.find]
include = ["tasks*"]
